add redux in project

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,7 @@
-@import "./styles/fonts.scss";
-
 body {
   margin: 0;
   padding: 20px 40px;
-  font-family: "Open sans", sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
